--- a/app5.html
+++ b/app5.html
@@ -150,7 +150,7 @@ body {
 <body>
 
 <div style="margin-left: 10px;">
-<h2>Simple 2D Coordinate Graph</h2>
+<h2>2D Graph Scroller</h2>
 <p>Note: Click and drag mouse in order to scroll anywhere on the 2D coordinate plane.</p>
  
 
